Jenkins/K8S/ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jenkins-whitelist
  annotations:
    # ingress.kubernetes.io/whitelist-source-range: ""
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # ingress.kubernetes.io/proxy-body-size: "50m"
    # nginx.org/proxy-connect-timeout: "60s"
    # nginx.org/proxy-read-timeout: "60s"
    # nginx.org/client-max-body-size: "50m"
    # nginx/client_max_body_size: 20m
    # nginx.ingress.kubernetes.io/proxy-body-size: 4G
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "14400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "14400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "14400"
    nginx.org/client-max-body-size: "50m"
spec:
  tls:
    - hosts:
      - www.jenkins.your-domain.com
      secretName: echo-tls
  rules:
  - host: www.jenkins.your-domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
